Fix PR tree-optimization/77724

2016-09-27  Robin Dapp  <rdapp@linux.vnet.ibm.com>

        PR tree-optimization/77724
        * tree-vect-loop-manip.c (create_intersect_range_checks_index):
        Add tree_fits_shwi_p check.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@240565 138bc75d-0d04-0410-961f-82ee72b054a4